--- a/views/participants.handlebars
+++ b/views/participants.handlebars
@@ -16,7 +16,7 @@
         <span class="ml ml-2">Proxy # ({{this.proxyIdentifier}})</span>
 
         <button data-participantSid="{{this.sid}}" data-serviceSid="{{serviceSid}}" data-sessionSid="{{sessionSid}}" id="del{{@index}}" class="btn btn-danger float-right">Delete</button>
-        <button class="btn btn-success float-right mr mr-4">Dial</button>
+        {{!-- <button class="btn btn-success float-right mr mr-4">Dial</button> --}}
     </li>
     {{/each}}
 </ul>
