Changed "Participant Name" to "Friendly Name" in modal

--- a/views/participants.handlebars
+++ b/views/participants.handlebars
@@ -34,7 +34,7 @@
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
                 </div>
                 <div class="modal-body">
-                    <span class="mr-2">Participant Name:</span><input class="form-control" id="friendlyName" type="text" required></input>
+                    <span class="mr-2">Friendly Name:</span><input class="form-control" id="friendlyName" type="text" required></input>
                     <span class="mr-2">Participant Phone:</span><input class="form-control" id="identifier"  type="tel" pattern="^\+?[1-9]\d{1,14}$" required></input>
                 </div>
                 <div class="modal-footer">
