--- a/views/services.handlebars
+++ b/views/services.handlebars
@@ -7,7 +7,7 @@
 <h3>Services</h3>
 <ul class="list-group">
     {{#each services}}
-    <li class="list-group-item">
+    <li class="mb-2 rounded list-group-item">
         <a href="/sessions?sid={{this.sid}}">{{this.uniqueName}}</a>
         <button data-serviceSid="{{this.sid}}" id="delService{{@index}}" class="btn btn-danger float-right">Delete</button>
     </li>
