--- a/views/participants.handlebars
+++ b/views/participants.handlebars
@@ -22,10 +22,12 @@
 </ul>
 <br>
 
-    <!-- Button HTML (to Trigger Modal) -->
-    <a href="#modalParticipant" role="button" class="btn btn-lg btn-primary" data-toggle="modal">Quick Create</a>
+<!-- Button HTML (to Trigger Modal) -->
+<a href="#modalParticipant" role="button" class="mr-4 btn btn-lg btn-primary" data-toggle="modal">Quick Create</a>
+{{!-- <a href="#modalParticipantExisting" role="button" class="btn btn-lg btn-primary" data-toggle="modal">Add Existing</a> --}}
 
-    <!-- Modal HTML -->
+<!-- Modal HTML -->
+
     <div id="modalParticipant" class="modal fade" tabindex="-1">
         <div class="modal-dialog">
             <div class="modal-content">
@@ -33,34 +35,69 @@
                     <h5 class="modal-title">Create Participant</h5>
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
                 </div>
-                <div class="modal-body">
-                    <span class="mr-2">Friendly Name:</span><input class="form-control" id="friendlyName" type="text" required></input>
-                    <span class="mr-2">Participant Phone:</span><input class="form-control" id="identifier"  type="tel" pattern="^\+?[1-9]\d{1,14}$" required></input>
+                <form action="#" class="needs-validation" novalidate="">
+                    <div class="modal-body">
+                        <label for="friendlyName" class="mr-2">Friendly Name:</label>
+                            <input class="form-control" id="friendlyName" type="text" required></input>
+                            <div class="invalid-feedback">
+                                Please provide a Friendly Name.
+                            </div>
+                        <label for="identifier" class="mr-2">Participant Phone #:</label>
+                            <input class="form-control" id="identifier"  type="tel" required></input>
+                            <div class="invalid-feedback">
+                                Please provide a Participant Phone #.
+                            </div>
+                        <label for="proxyIdentifier" class="mr-2">Assigned Proxy # <i>(optional)</i>:</label>
+                            <input class="form-control" id="proxyIdentifier"  type="tel"></input>
+                            <div class="invalid-feedback">
+                                Needs to be a valid E164 Phone Number
+                            </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                        <button data-serviceSid="{{serviceSid}}" data-sessionSid="{{sessionSid}}" id="createParticipant" type="submit" class="btn btn-primary">Submit</button>
+                    </div>
+                </form>
+                <div id="modal-errorCreate" class="mx-4 alert alert-danger" role="alert" style="display:none">
+                    <span id="errorMsgCreate"></span>
                 </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                    <button data-serviceSid="{{serviceSid}}" data-sessionSid="{{sessionSid}}" id="createParticipant" type="button" class="btn btn-primary">Submit</button>
-                </div>
-                <div id="modal-error" class="mx-4 alert alert-danger" role="alert" style="display:none">
-                    <span id="errorMsg"></span>
-                </div>
+                
             </div>
         </div>
     </div>
+<div id="modalParticipantExisting" class="modal fade" tabindex="-1">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Add Existing Participant</h5>
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+            </div>
+            <div class="modal-body">
+                <span class="mr-2">Participant SID:</span><input class="form-control" id="participantSID" type="text" required></input>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                <button data-serviceSid="{{serviceSid}}" data-sessionSid="{{sessionSid}}" id="addExistingParticipant" type="button" class="btn btn-primary">Submit</button>
+            </div>
+            <div id="modal-errorAdd" class="mx-4 alert alert-danger" role="alert" style="display:none">
+                <span id="errorMsgAdd"></span>
+            </div>
+        </div>
+    </div>
+</div>
 <br>
-<br>
-<h3>Available Phone Numbers</h3>
-<ul class="list-group">
-    {{#each phoneNumbers}}
-    <li class="list-group-item">
-        {{this.phoneNumber}}
-    </li>
-    {{/each}}
-</ul>
-<br>
-<a target="_blank" class="btn btn-lg btn-primary" href="https://www.twilio.com/console/proxy/services/{{serviceSid}}/proxy_numbers" role="button">Add Phone Numbers</a></button>
+
+<div id="errorDiv" class="mx-4 alert alert-danger" role="alert" style="display:none">
+    <span id="errorMsgMain"></span>
+</div>
 
 <script>
+
+    $(document).ready(function(){
+        $('#identifier, #proxyIdentifier').inputmask({
+            "regex": "^(?:(?:\\+?1\\s*(?:[.-]\\s*)?)?(?:\\(\\s*([2-9]1[02-9]|[2-9][02-8]1|[2-9][02-8][02-9])\\s*\\)|([2-9]1[02-9]|[2-9][02-8]1|[2-9][02-8][02-9]))\\s*(?:[.-]\\s*)?)?([2-9]1[02-9]|[2-9][02-9]1|[2-9][02-9]{2})\\s*(?:[.-]\\s*)?([0-9]{4})(?:\\s*(?:#|x\\.?|ext\\.?|extension)\\s*(\\d+))?$"
+        }); //specifying options
+    });
     let i = 0;
     let id = `del${i}`;
     while(document.getElementById(id) !== null)
@@ -74,36 +111,56 @@
                 location.reload(); //Implement partial refresh for production code, but for ease of demo, just reload the page
                 //setTimeout(location.reload.bind(location), 8000);
             }).fail((xhr, status, error) => {
-                $('#modal-error').show();
-                $('#errorMsg').text(xhr.responseText);
+                $('#errorDiv').show();
+                $('#errorMsgMain').text(xhr.responseText);
             });
-            //Need to update this to be a POST and to use AXIOS
-            //$.getJSON(`/participantDelete?serviceSid=${element.attributes["data-serviceSid"].value}&sessionSid=${element.attributes["data-sessionSid"].value}&participantSid=${element.attributes["data-participantSid"].value}`);
-            //setTimeout(location.reload.bind(location), 1000); //For production code, I would not reload the page, but rather just create a DIV container and refresh that
-            //Need this to be part of a callback, otherwise it won't always work because it will be called before the previous code is finished
         });
         i++;
         id = `del${i}`;
     }
 
-    let element2 = document.getElementById('createParticipant');
-    let friendlyName = document.getElementById('friendlyName');
-    let identifier = document.getElementById('identifier');
-    element2.addEventListener('click', () => {
+    $('.needs-validation').submit((event) => {
+        if ($('.needs-validation')[0].checkValidity() === false) {
+            event.preventDefault();
+            event.stopPropagation();
+            $('.needs-validation').addClass('was-validated');
+        }
+        else{
+            $('.needs-validation').addClass('was-validated');
+            event.preventDefault(); //This is absolutly necessary to prevent Promise Rejection warnings
+            let serviceSid = event.currentTarget.createParticipant.attributes.getNamedItem("data-serviceSid").value;
+            let sessionSid = event.currentTarget.createParticipant.attributes.getNamedItem("data-sessionSid").value;
+            let friendlyname = event.currentTarget.friendlyName.value;
+            let identifier = event.currentTarget.identifier.value.replace(/\D/g,'');
+            let proxyIdentifier = event.currentTarget.proxyIdentifier.value.replace(/\D/g,'');
+            $.ajax({
+                url: `/createParticipant?proxyIdentifier=${proxyIdentifier}&serviceSid=${serviceSid}&sessionSid=${sessionSid}&friendlyName=${friendlyname}&identifier=${identifier}`,
+                type: 'POST',
+            }).done((data) => {
+                location.reload(); 
+            }).fail((xhr, status, error) => {
+                $('#modal-errorCreate').show();
+                $('#errorMsgCreate').text(xhr.responseText);
+            }).always((always) => {
+                console.log('always');
+            })          
+        }
+
+    });
+
+    let addExistPart = document.getElementById('addExistingParticipant');
+    let partSID = document.getElementById('participantSID');
+    addExistPart.addEventListener('click', () => {
         $.ajax({
-            url: `/createParticipant?serviceSid=${element2.attributes["data-serviceSid"].value}&sessionSid=${element2.attributes["data-sessionSid"].value}&friendlyName=${friendlyName.value}&identifier=${identifier.value}`,
+            url: `/addExistingParticipant?serviceSid=${addExistPart.attributes["data-serviceSid"].value}&sessionSid=${addExistPart.attributes["data-sessionSid"].value}&participantSid=${partSID.value}`,
             type: 'POST',
         }).done((data) => {
             location.reload(); //Implement partial refresh for production code, but for ease of demo, just reload the page
             //setTimeout(location.reload.bind(location), 8000);
         }).fail((xhr, status, error) => {
-            $('#modal-error').show();
-            $('#errorMsg').text(xhr.responseText);
+            $('#modal-errorAdd').show();
+            $('#errorMsgAdd').text(xhr.responseText);
         });
-        //Need to update this to be a POST and to use AXIOS
-        //$.getJSON(`/createParticipant?serviceSid=${element2.attributes["data-serviceSid"].value}&sessionSid=${element2.attributes["data-sessionSid"].value}&friendlyName=${friendlyName.value}&identifier=${identifier.value}`);
-        //setTimeout(location.reload.bind(location), 1000); //For production code, I would not reload the page, but rather just create a DIV container and refresh that
-            //Need this to be part of a callback, otherwise it won't always work because it will be called before the previous code is finished
     });
 </script>
 
