Added click to call functionality

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,9 +6,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/inputmask/4.0.8/jquery.inputmask.bundle.min.js"></script>
-{{!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.0/jquery.validate.min.js"></script> --}}
-{{!-- <script src="../../node_modules/inputmask/dist/min/jquery.inputmask.bundle.min.js"></script> --}}
-{{!-- <script src="../../node_modules/inputmask/dist/inputmask/bindings/inputmask.binding.js"></script> --}}
+<script type="text/javascript" src="https://media.twiliocdn.com/sdk/js/client/v1.7/twilio.min.js"></script>
 
 <!DOCTYPE html>
 <html lang="en">
