added SMS and Chat funtionality

--- a/views/interactions.handlebars
+++ b/views/interactions.handlebars
@@ -3,7 +3,7 @@
     <li class="breadcrumb-item"><a href="/">Home</a></li>
     <li class="breadcrumb-item"><a href="/services">Services</a></li>
     <li class="breadcrumb-item"><a href="/sessions?sid={{serviceSid}}">Sessions</a></li>
-    <li class="breadcrumb-item"><a href="/participants?sessionSid={{sessionSid}}&serviceSid={{serviceSid}}">Participants</a></li>
+    <li class="breadcrumb-item"><a href="/participants?sessionSid={{sessionSid}}&serviceSid={{serviceSid}}&sessionMode={{this.mode}}&sessionStatus={{this.status}}">Participants</a></li>
     <li class="breadcrumb-item active">{{selectedParticipant}}'s Interactions</li>
   </ol>
 </nav>
